# CHIP8-Rust

./: Cargo.toml  README.md
src/: chip_machine.rs  main.rs  memory.rs  processor.rs
